# web_harvestor

./: .gitignore  PROJECT_STATUS.md  QUICKSTART.md  README.md  check_syntax.py  install.bat  main.py  migrate_database.py  pyproject.toml  requirements.txt  run.bat  test_data_extractor_fix.py  test_fixed_patent_extraction.py  test_html_parsing.py  test_patent_extraction.py  test_project.py  test_tables_extraction.py
.github/workflows/: build-windows.yml
.meta/: playwright_form_crawler.py  table_info_青岛迈金智能科技股份有限公司_1761213669.csv
.qoder/quests/: browser-scraping-adjustment-documentation-update.md  virtual-environment-setup.md
src/: __init__.py
src/browser/: __init__.py  cookie_manager.py  playwright_controller.py  qwebengine_controller.py
src/const/: crawl.py
src/crawler/: __init__.py  crawler_engine.py  data_exporter.py  data_extractor.py
src/database/: models.py
src/ui/: main_window.py
